# MobileNotification_demo

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  LICENSE.md  README.md
.github/workflows/: ci_builds.yml
assets/android/: AndroidManifest.xml  build.gradle
assets/ios/: Info.plist
qml/: MobileApplication.qml
src/: PermissionManager.cpp  PermissionManager.h  PermissionManager_AndroidHelper.cpp  PermissionManager_AndroidHelper.h  main.cpp
